# carbonchain

./: .gitignore  .lintstagedrc.js  CONTRIBUTING.md  QUICK_START.md  README.md  TODO.md  WINDOWS_SETUP.md  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
api/: .env.example  Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
api/src/: app.controller.ts  app.module.ts  env-validation.spec.ts  env-validation.ts  main.ts
api/src/admin/: admin.controller.spec.ts  admin.controller.ts  admin.guard.ts  admin.module.ts  admin.service.spec.ts  admin.service.ts
api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  stellar-auth.strategy.ts
api/src/common/: pino-nest-logger.service.ts  throttler.guard.spec.ts  throttler.guard.ts
api/src/credits/: credit.entity.ts  credit.repository.spec.ts  (+5 more)
api/test/: app.e2e-spec.ts  jwt-auth.e2e-spec.ts  retire.e2e-spec.ts  security.e2e-spec.ts  setup.ts
contracts/: Cargo.toml
contracts/credit_registry/: Cargo.toml
contracts/credit_registry/src/: errors.rs  events.rs  lib.rs  storage.rs  test_helpers.rs  types.rs
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: lib.rs
contracts/mrv_oracle/: Cargo.toml
contracts/mrv_oracle/src/: lib.rs
contracts/retirement/: Cargo.toml
contracts/retirement/src/: errors.rs  lib.rs  types.rs
docs/: architecture.md
frontend/: angular.json  package-lock.json  package.json  vite.config.ts
scripts/: deploy-testnet.sh  slow-queries.sql  smoke-test.sh
shared/: index.ts
(+87 files in other folders)
