[workspace]
resolver = "2"
members = [
    "credit_registry",
    "retirement",
    "marketplace",
    "mrv_oracle",
]

[workspace.package]
version = "0.1.0"
authors = ["CarbonChain Team"]
edition = "2021"
publish = false

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
lto = true
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug = true

[patch.crates-io]
# base64ct v1.7.2+ on crates.io has been republished with `edition = "2024"`
# which requires Rust >= 1.85. The CI uses Rust 1.81 for wasm32-unknown-unknown
# compatibility with Soroban SDK 26.0.1. Use the Git tag before the edition bump.
base64ct = { git = "https://github.com/RustCrypto/formats", tag = "base64ct/v1.7.2" }
