[package]
name = "carbonchain-retirement"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
carbonchain-credit-registry = { path = "../credit_registry", features = ["testutils"] }
